[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

[lib]
name = "advent_of_code_2023"
path = "src/lib.rs"

[[bin]]
name = "new"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num-integer = "0.1.45"
num-traits = "0.2"
pathfinding = "4.6.0"
itertools = "0.12.0"

[[bin]]
name = "1"
path = "src/day_01.rs"

[[bin]]
name = "2"
path = "src/day_02.rs"

[[bin]]
name = "3"
path = "src/day_03.rs"

[[bin]]
name = "4"
path = "src/day_04.rs"

[[bin]]
name = "5"
path = "src/day_05.rs"

[[bin]]
name = "6"
path = "src/day_06.rs"

[[bin]]
name = "7"
path = "src/day_07.rs"

[[bin]]
name = "8"
path = "src/day_08.rs"

[[bin]]
name = "9"
path = "src/day_09.rs"

[[bin]]
name = "10"
path = "src/day_10.rs"

[[bin]]
name = "11"
path = "src/day_11.rs"

[[bin]]
name = "12"
path = "src/day_12.rs"

[[bin]]
name = "13"
path = "src/day_13.rs"

[[bin]]
name = "15"
path = "src/day_15.rs"

[[bin]]
name = "14"
path = "src/day_14.rs"

[[bin]]
name = "16"
path = "src/day_16.rs"

[[bin]]
name = "17"
path = "src/day_17.rs"

[[bin]]
name = "18"
path = "src/day_18.rs"

[[bin]]
name = "19"
path = "src/day_19.rs"

[[bin]]
name = "20"
path = "src/day_20.rs"

[[bin]]
name = "21"
path = "src/day_21.rs"

[[bin]]
name = "22"
path = "src/day_22.rs"

[[bin]]
name = "23"
path = "src/day_23.rs"
